tests/ast_interpreter/err_print_arg_count.expected
<string>:2:5: error: function print expects 1 argument, but 2 were provided
    print(1, 2);
    ^^^^^^^^^^^
