tests/ast_interpreter/err_print_arg_count.nx
fun main() {
    print(1, 2);
}
